--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.9.4"
+    "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/vite": "^4.1.10",
+    "astro": "^5.9.4",
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^4.1.10"
   }
 }
