--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proper-proxima",
+  "name": "astro-portfolio",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,10 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^6.0.2",
-    "@tailwindcss/vite": "^4.1.10",
-    "astro": "^5.9.4",
-    "autoprefixer": "^10.4.21",
-    "tailwindcss": "^4.1.10"
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.5.0",
+    "marked": "^12.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0"
   }
 }
