Add project thumbnail generation and update project data structure
- Introduced a new utility for generating dynamic SVG thumbnails for projects.
- Updated project data to include thumbnail URLs.
- Added a README for project thumbnails with guidelines and examples.
- Updated favicon to a new ICO format.
- Enhanced project display with auto-generated thumbnails in the projects page.
- Created a thumbnail preview HTML page to visualize generated thumbnails.

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -39,6 +39,7 @@
     "description": "Personal portfolio website showcasing projects, certifications, and contact information, built with Astro and Tailwind CSS for superior performance and SEO.",
     "technologies": ["Astro", "Tailwind CSS", "JavaScript", "Responsive Design"],
     "githubUrl": "https://github.com/arnabdey73/astro-portfolio",
-    "featured": true
+    "featured": true,
+    "thumbnail": "/assets/img/portfolio-thumbnail.jpg"
   }
 ]
