feat: replace portfolio thumbnail image with SVG and update references
- Deleted the old JPEG thumbnail image and added a new SVG thumbnail for the portfolio.
- Updated references in `projects.json` and `site.json` to point to the new SVG image.
- Implemented a new contact form API with spam protection and email validation.
- Created a fallback contact API that logs submissions and generates a mailto link.
- Added a new API endpoint to fetch GitHub data, including profile, repositories, and contributions.
- Updated the open-source page to fetch and display real GitHub data dynamically.
- Removed unused open-source data retrieval function and cleaned up related imports.

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -40,6 +40,6 @@
     "technologies": ["Astro", "Tailwind CSS", "JavaScript", "Responsive Design"],
     "githubUrl": "https://github.com/arnabdey73/astro-portfolio",
     "featured": true,
-    "thumbnail": "/assets/img/portfolio-thumbnail.jpg"
+    "thumbnail": "/assets/img/portfolio-thumbnail.svg"
   }
 ]
