--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.5.0",
-    "marked": "^12.0.0"
+    "marked": "^12.0.0",
+    "resend": "^4.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
