--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.5.0",
     "marked": "^12.0.0",
+    "node-fetch": "^3.3.2",
     "resend": "^4.6.0"
   },
   "devDependencies": {
