--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.5.0",
+    "@astrojs/tailwind": "^6.0.2",
+    "@astrojs/vercel": "^8.2.2",
+    "astro": "^5.11.2",
+    "html-escaper": "^3.0.3",
     "marked": "^12.0.0",
     "node-fetch": "^3.3.2",
-    "resend": "^4.6.0"
+    "resend": "^4.6.0",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
