--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "^8.2.2",
     "astro": "^5.11.2",
+    "framer-motion": "^12.23.6",
     "html-escaper": "^3.0.3",
+    "lucide-react": "^0.525.0",
     "marked": "^12.0.0",
     "node-fetch": "^3.3.2",
     "resend": "^4.6.0",
