feat: Add structured data validation script and enhance SEO implementation
- Introduced a new script `validate-structured-data.js` for validating structured data against Schema.org standards.
- Updated `Layout.astro` to include organization structured data generation.
- Enhanced `about.astro`, `contact.astro`, `open-source.astro`, `projects.astro`, `services.astro` pages to generate and include structured data.
- Added functions in `structured-data.js` for generating structured data for various pages including About, Contact, Organization, and Open Source.
- Improved existing structured data generation functions to align with Schema.org specifications.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "validate-schema": "node scripts/validate-structured-data.js",
+    "validate-schema-simple": "node scripts/validate-schema-simple.js",
+    "test-seo": "npm run validate-schema-simple"
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.4.1",
